[gd_scene load_steps=9 format=3 uid="uid://d1u6be282t5l6"]

[ext_resource type="Texture2D" uid="uid://br3j1afb22r3y" path="res://models/debug-block_8740nt-hexagonal-2598-mm-architextures.jpg" id="1_q5ml5"]
[ext_resource type="Script" path="res://ui/shop_item.gd" id="1_wlhph"]
[ext_resource type="Texture2D" uid="uid://dkvwlf708ayk0" path="res://assets/icon/background.png" id="3_fft30"]
[ext_resource type="FontFile" uid="uid://cxvusk35yis3l" path="res://assets/font/Dadlygood.otf" id="4_132ss"]
[ext_resource type="Texture2D" uid="uid://c6a6ynnhxytfa" path="res://assets/icon/silver-bullet.png" id="5_dugyq"]
[ext_resource type="Texture2D" uid="uid://qas8sp4bfv5w" path="res://assets/icon/reticule.png" id="6_7sr40"]
[ext_resource type="Texture2D" uid="uid://boys78erqcnk2" path="res://assets/icon/empty-hourglass.png" id="7_2mav1"]
[ext_resource type="Texture2D" uid="uid://dcbblqklxu5tg" path="res://assets/icon/bullets.png" id="8_jgx1s"]

[node name="Item" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
button_mask = 3
script = ExtResource("1_wlhph")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_q5ml5")
expand_mode = 1
stretch_mode = 6

[node name="StatusContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ItemImage"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 177.0
grow_horizontal = 0

[node name="AttackDamageBg" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer"]
layout_mode = 2
texture = ExtResource("3_fft30")
expand_mode = 4

[node name="AttackDamageLabel" type="Label" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackDamageBg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -14.5
offset_right = -5.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.847059, 0, 0.211765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_132ss")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2
vertical_alignment = 2

[node name="AttackDamageIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackDamageBg"]
unique_name_in_owner = true
self_modulate = Color(0.847059, 0, 0.211765, 1)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("5_dugyq")
expand_mode = 4

[node name="AttackRangeBg" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer"]
layout_mode = 2
texture = ExtResource("3_fft30")
expand_mode = 4

[node name="AttackRangeLabel" type="Label" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackRangeBg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -14.5
offset_right = -5.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.25098, 1, 0.247059, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_132ss")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2
vertical_alignment = 2

[node name="AttackRangeIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackRangeBg"]
unique_name_in_owner = true
self_modulate = Color(0.25098, 1, 0.247059, 1)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("6_7sr40")
expand_mode = 4

[node name="AttackSpeedBg" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer"]
layout_mode = 2
texture = ExtResource("3_fft30")
expand_mode = 4

[node name="AttackSpeedLabel" type="Label" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackSpeedBg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -14.5
offset_right = -5.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.32549, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_132ss")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2
vertical_alignment = 2

[node name="AttackSpeedIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AttackSpeedBg"]
unique_name_in_owner = true
self_modulate = Color(0.32549, 1, 1, 1)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("7_2mav1")
expand_mode = 4

[node name="AmmoBg" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer"]
layout_mode = 2
texture = ExtResource("3_fft30")
expand_mode = 4

[node name="AmmoLabel" type="Label" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AmmoBg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -14.5
offset_right = -5.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.505882, 0.505882, 0.505882, 1)
theme_override_colors/font_shadow_color = Color(0.0431373, 0.0431373, 0.0431373, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_132ss")
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2
vertical_alignment = 2

[node name="AmmoIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ItemImage/StatusContainer/AmmoBg"]
unique_name_in_owner = true
self_modulate = Color(0.505882, 0.505882, 0.505882, 1)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("8_jgx1s")
expand_mode = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("1_q5ml5")
expand_mode = 1
stretch_mode = 1

[node name="Price" type="Label" parent="MarginContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -11.5
offset_right = 29.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("4_132ss")
text = "30 Gold"
horizontal_alignment = 1
vertical_alignment = 2
